mobile tweaks and fixes to make the cms ..... more usable on mobile (#272)
* feat: get mobile menu working

* feat: more mobile fixups

--- a/admin/templates/clean/css/darkmode.css
+++ b/admin/templates/clean/css/darkmode.css
@@ -153,4 +153,13 @@
     .state_button button {
 		background-color: #121212 !important;
 	}
+
+    @media screen and (max-width: 1023px) {
+        .navbar-menu {
+            background-color: inherit;
+        }
+        nav {
+            background-color: #222 !important;
+        }
+    }
 }
